Final project update
update

--- a/Adam/finalProject-draft1.ipynb
+++ b/Adam/finalProject-draft1.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -212,6 +212,7 @@
        "      <th>review/score</th>\n",
        "      <th>num_helpful</th>\n",
        "      <th>num_total</th>\n",
+       "      <th>helpful_ratio</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -220,166 +221,109 @@
        "      <td>3.0</td>\n",
        "      <td>7</td>\n",
        "      <td>7</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>3.0</td>\n",
        "      <td>4</td>\n",
        "      <td>4</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>5.0</td>\n",
        "      <td>8</td>\n",
        "      <td>10</td>\n",
+       "      <td>0.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3.0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>3.0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  review/score  num_helpful  num_total\n",
-       "0          3.0            7          7\n",
-       "1          3.0            4          4\n",
-       "2          5.0            8         10\n",
-       "3          3.0            1          1\n",
-       "4          3.0            1          1"
+       "  review/score  num_helpful  num_total  helpful_ratio\n",
+       "0          3.0            7          7            1.0\n",
+       "1          3.0            4          4            1.0\n",
+       "2          5.0            8         10            0.8\n",
+       "3          3.0            1          1            1.0\n",
+       "4          3.0            1          1            1.0"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "df1 = df[['review/score','num_helpful','num_total']]\n",
+    "df['helpful_ratio'] = df['num_helpful']/df['num_total']\n",
+    "df1 = df[['review/score','num_helpful','num_total','helpful_ratio']]\n",
     "df1.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "product/productId\n",
-       "0310582792      1\n",
-       "073600193X      3\n",
-       "0764004492      3\n",
-       "0767002652     24\n",
-       "076780046X     64\n",
-       "0767805534    124\n",
-       "0767825454      1\n",
-       "0767845234     10\n",
-       "078401115X     85\n",
-       "0784011532     57\n",
-       "0788600222     12\n",
-       "0790701251    315\n",
-       "0790732033     37\n",
-       "0790733382     32\n",
-       "0790747324    189\n",
-       "0790750708     68\n",
-       "0792151712     10\n",
-       "0792845773     25\n",
-       "0793903335      4\n",
-       "0793927560      1\n",
-       "0800103688     77\n",
-       "0800126033     12\n",
-       "0849986737      1\n",
-       "0934837120      2\n",
-       "0940871491      1\n",
-       "0955766818      1\n",
-       "0963199668      1\n",
-       "0966012224      1\n",
-       "0966199464      1\n",
-       "0967877709      2\n",
-       "             ... \n",
-       "B008IG0F7G      5\n",
-       "B008JAG4GW     17\n",
-       "B008LYCDW0      1\n",
-       "B008M34Y72     16\n",
-       "B008NNY8CW      3\n",
-       "B008Q00I2Q    132\n",
-       "B008R52L48      1\n",
-       "B008R52L4I      1\n",
-       "B008ROG898      7\n",
-       "B008SAPAYA      6\n",
-       "B008SAPAYU      1\n",
-       "B008UO5U9E    136\n",
-       "B008X1O7KM    206\n",
-       "B008YKQC6E      2\n",
-       "B00925T8YI      1\n",
-       "B0092MDYV4      8\n",
-       "B00932ADHQ     11\n",
-       "B0094MOQ0K     14\n",
-       "B0095D5454    158\n",
-       "B0096RC57O      4\n",
-       "B0099VUXCQ      1\n",
-       "B009B6XA1U     26\n",
-       "B009CWWCYO      1\n",
-       "B009D0AZI0      3\n",
-       "B009HNDF3K     50\n",
-       "B009K37SUS      2\n",
-       "B009M8EA3Y      1\n",
-       "B009N4Z9XW      1\n",
-       "B009QW6BXS     43\n",
-       "B009RAF860      3\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# How many products were reviewed? How often? Distribution of products reviewed. Plot it.\n",
-    "import matplotlib.pyplot as plt\n",
-    "df.groupby('product/productId').size()"
+    "import numpy as np\n",
+    "import statsmodels.formula.api as smf\n",
+    "import patsy\n",
+    "import seaborn as sns\n",
+    "from seaborn import plt\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.linear_model import RidgeCV\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "1287"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 43390 entries, 0 to 43389\n",
+      "Data columns (total 4 columns):\n",
+      "review/score     43390 non-null object\n",
+      "num_helpful      43390 non-null int64\n",
+      "num_total        43390 non-null int64\n",
+      "helpful_ratio    31300 non-null float64\n",
+      "dtypes: float64(1), int64(2), object(1)\n",
+      "memory usage: 1.7+ MB\n"
+     ]
     }
    ],
    "source": [
-    "df.groupby('product/productId').size().count()"
+    "df1.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -387,78 +331,77 @@
     {
      "data": {
       "text/plain": [
-       "review/userId   review/score\n",
-       "A10033ZS10JQYA  4.0             1\n",
-       "A10078GF4Z3GJN  5.0             1\n",
-       "A1007T2IVFQKYN  5.0             1\n",
-       "A100JCBNALJFAW  3.0             1\n",
-       "                5.0             1\n",
-       "A100MPD67FD3ID  5.0             1\n",
-       "A100PY9HC7VVI8  5.0             1\n",
-       "A100RFQHFO005W  3.0             1\n",
-       "A100Y8WSLFJN7Q  5.0             1\n",
-       "A101LE0G4T2RD0  5.0             1\n",
-       "A101PLUE57KUSS  5.0             1\n",
-       "A101XQF0IGPEO   5.0             1\n",
-       "A1022GOAE7J1R1  5.0             1\n",
-       "A1023CFGMARBHM  1.0             1\n",
-       "A1027EV8A9PV1O  5.0             1\n",
-       "A102TBYVX6319C  3.0             1\n",
-       "A102YM3H3O003E  5.0             1\n",
-       "A1031BCVB4XNKB  1.0             1\n",
-       "A1033RWNZWEMR5  5.0             1\n",
-       "A103EXN5Q7HX6Z  1.0             1\n",
-       "A103IUREF6NQ5O  4.0             1\n",
-       "A103NIIU3EJZIG  5.0             1\n",
-       "A103QX7NUHBOUF  5.0             1\n",
-       "A103VZ3KDF2RT5  1.0             1\n",
-       "A103W7ZPKGOCC9  5.0             2\n",
-       "A103ZG6ASSR7UT  3.0             1\n",
-       "A1041HQGJDKFG5  5.0             1\n",
-       "A1044O5YTKM1AJ  4.0             2\n",
-       "A104J0XKZR32JS  5.0             1\n",
-       "A104NCZUD52CWG  5.0             1\n",
-       "                               ..\n",
-       "AZXA77WWFK8IM   1.0             1\n",
-       "AZXDEJR0I4L51   1.0             1\n",
-       "AZXFMHSH6VSTS   4.0             1\n",
-       "AZXHK8IO25FL6   3.0             1\n",
-       "AZXLIDGMZHOER   5.0             1\n",
-       "AZXTPGNAB366A   5.0             1\n",
-       "AZXUFTJVXJWL0   5.0             1\n",
-       "AZY0WAYW61R3Z   2.0             1\n",
-       "AZY1OM4M0YXXI   5.0             1\n",
-       "AZY5BQMFSI7CD   5.0             1\n",
-       "AZYBYAJ4ZHSDT   4.0             1\n",
-       "AZYCDQF15WXET   5.0             1\n",
-       "AZYFQPBNJ8I7O   5.0             1\n",
-       "AZYJ9TS07B02W   2.0             1\n",
-       "                5.0             1\n",
-       "AZYJG5MEQ7P1B   1.0             2\n",
-       "AZYUZZXHRJRVX   5.0             1\n",
-       "AZYWD0WPB2YFR   1.0             1\n",
-       "AZYZILYSQA6VQ   5.0             2\n",
-       "AZZ109YL80ZX0   5.0             1\n",
-       "AZZ33FMPHXWEW   5.0             1\n",
-       "AZZ5ENX41WOYZ   5.0             1\n",
-       "AZZ8N5REH7J98   2.0             1\n",
-       "AZZJX02B2F22D   5.0             1\n",
-       "AZZQLMNX239VT   5.0             1\n",
-       "AZZVZL4QEHEHO   5.0             1\n",
-       "AZZW25TJ2KNKV   5.0             1\n",
-       "AZZYMSP9YNZ5H   5.0             1\n",
-       "AZZZA9JS7UPHO   4.0             1\n",
-       "AZZZRU9BPN8UP   4.0             1\n",
-       "dtype: int64"
+       "(43390, 4)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby(['review/userId','review/score']).size()"
+    "# How many rows and columns does the dataset have?\n",
+    "df1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_helpful</th>\n",
+       "      <th>num_total</th>\n",
+       "      <th>helpful_ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>num_helpful</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.954179</td>\n",
+       "      <td>0.137273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>num_total</th>\n",
+       "      <td>0.954179</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.027192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>helpful_ratio</th>\n",
+       "      <td>0.137273</td>\n",
+       "      <td>0.027192</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               num_helpful  num_total  helpful_ratio\n",
+       "num_helpful       1.000000   0.954179       0.137273\n",
+       "num_total         0.954179   1.000000       0.027192\n",
+       "helpful_ratio     0.137273   0.027192       1.000000"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# View the correlations\n",
+    "df1.corr()"
    ]
   },
   {
